# seestarpy

./: .gitignore  .readthdocs.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  README.md  claude_found_the_plan_methods.md  decompiled_api_commands.txt  dev_readme.txt  pyproject.toml  seestar_alp_methods.md  seestar_api_changes.md  seestar_api_methods_summary_v3.0.2.md  seestar_api_methods_summary_v3.2.0.md
docs/: conf.py  index.rst
docs/api/: api_index.rst  auth.rst  connection.rst  crowdsky.rst  data.rst  events.rst  plan.rst  raw.rst  raw_commands.rst  stack.rst  status.rst  stream.rst  ui.rst
docs/examples/: basic_connection.rst  basic_observing.rst  basic_status_checks.rst  changing_gain.rst  changing_seestar_settings.rst  crowdsky_stacking.rst  data_management.rst  live_streaming.rst  observation_plans.rst
docs/info/: authentication.rst  connection_framework.rst  errors.rst  image_stream_protocol.rst  sniffing_port_4700.rst
mobile_app/: README.md  main.py
src/seestarpy/: __init__.py  auth.py  cli.py  commands.py  connection.py  coordintate_utils.py  crowdsky.py  data.py  event_watcher.py  extract_pem.py  observe.py  plan.py  raw.py  raw_commands.py  setup.py  stack.py  stacking.py  status.py  stream.py  ui.py
testing/: event_output.txt  events.txt  testing_interactivity.ipynb
tests/: conftest.py  test_auth.py  test_commands.py  test_connection.py  test_crowdsky_rename.py  test_crowdsky_server.py  test_data_download.py  test_event_definitions.py  test_extract_pem.py  test_healpix.py  test_mosaic_plan.py  test_named_plan.py  test_plot_mosaic.py  test_quadrilateral_plan.py  test_stack.py  test_stack_blocks.py
tests/integration/: conftest.py  test_00_connection.py  test_04_data.py  (+9 more)
tools/: extract_seestar_api.py
(+22 files in other folders)
