[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seestarpy"
version = "0.1.3"
authors = [ { name = "Kieran Leschinski", email = "kdleschinski@gmail.com" },]
description = "Python interface for the SeeStar telescope control system"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    # These three for talking to the Seestar
    "websockets",       # for html dashboard
    "pysmb>=1.2.9",     # For SMB file operations
    "tzlocal",          # For getting the local timezone
    # Below here for the stacking and stashing algos
    "numpy",
    "opencv-python",
    "astropy",
    "astroalign",
    "sep>=1.4.0",
    # For CrowdSky WebDAV uploads
    "requests",
    "build>=1.4.0",
    "twine>=6.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["seestarpy"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"  # For testing
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_autodoc_typehints",
]

[project.urls]
"Homepage" = "https://github.com/astronomyk/seestarpy"
"Documentation" = "https://seestarpy.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/astronomyk/seestarpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seestarpy"]

[project.scripts]
seestar = "seestarpy.cli:main"
